# primrose

./: .buildinfo  .bumpversion.cfg  .gitignore  .travis.yml  =2.8.2  =2.8.3  CHANGELOG.md  Dockerfile  MANIFEST.in  README.html  README.md  README_CLI.html  README_CLI.md  README_DAG_CONFIG.html  README_DAG_CONFIG.md  README_DATAOBJECT.html  README_DATAOBJECT.md  README_DEVELOPER_NOTES.html  README_DEVELOPER_NOTES.md  README_GETTING_STARTED.html  README_GETTING_STARTED.md  README_METADATA.html  README_METADATA.md  README_NOTIFICATIONS.html  README_NOTIFICATIONS.md  generate_docs.sh  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_plot_dag.py  run_primrose.py  search.html  searchindex.js  setup.py
.github/: PULL_REQUEST_TEMPLATE.html  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  issues.yml
_sources/: README.md.txt  README_CLI.md.txt  README_GETTING_STARTED.md.txt  README_NOTIFICATIONS.md.txt  index.rst.txt
config/: example_read_r.json  hello_world_classifier_predict.json  hello_world_classifier_predict.yml  hello_world_classifier_train.yml  hello_world_cluster_eval.json  hello_world_cluster_eval.yml  hello_world_cluster_simple_train.json  hello_world_cluster_simple_train.yml  hello_world_cluster_train.json  hello_world_cluster_train.yml  hello_world_custom_nodes.json  hello_world_custom_nodes.yml  hello_world_read_write.json  hello_world_read_write.yml  hello_world_regression_train.json  hello_world_regression_train.yml
data/: unclustered.csv
docs/: .buildinfo  README.html  README_CLI.html  README_DAG_CONFIG.html  README_DATAOBJECT.html  README_DEVELOPER_NOTES.html  README_GETTING_STARTED.html  README_METADATA.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README_CLI.md.txt  README_DAG_CONFIG.md.txt  README_DATAOBJECT.md.txt  README_GETTING_STARTED.md.txt
primrose/: __init__.py  dag_runner.py  data_object.py  node_factory.py  notification_utils.py  util.py
primrose/base/: conditional_path_node.py  do_nothing_node.py  model.py  node.py  pipeline.py  postprocess.py  reader.py  search_engine.py  sql_reader.py  success.py  transformer.py  transformer_sequence.py  writer.py
primrose/cleanup/: logging_success.py
primrose/conditionalpath/: simple_switch.py
primrose/configuration/: configuration.py  configuration_dag.py  util.py
primrose/dag/: config_layer_traverser.py  dag_traverser.py  depth_first_traverser.py  traverser_factory.py
primrose/dataviz/: cluster_plotter.py
primrose/models/: minimal_search_engine.py  sklearn_classifier_model.py  sklearn_cluster_model.py  sklearn_model.py  sklearn_regression_model.py
primrose/notifications/: abstract_notification.py  success_notification.py
primrose/pipelines/: dataframe_joiner.py  encode_train_test_split.py  sklearn_preprocessing_pipeline.py  train_test_split.py  transformer_pipeline.py
primrose/readers/: csv_reader.py  (+13 more)
scripts/: bump_script.sh  generate_docs.sh  git_push.sh  linux_install.sh  mac_install.sh  setup_git.sh  travis_install.sh
sphinx/: conf.py
templates/: awesome_reader.py
test/: config_substitution.yml  config_with_comments.json  ext_node_example.py  hello_world_read_process_write.json  hello_world_tennis.json  hello_world_tennis.yml  merge_right.csv  merge_right2.csv  merge_right3.csv  merge_right4.csv  metadata_fragment.json  metadata_fragment.yml  minimal.csv  read_write_fragment.json  read_write_fragment.yml  tennis.csv  test_abstract_model.py  test_abstract_pipeline.py  test_abstract_search_engine.py  test_abstract_sql_reader.py  test_abstract_transformer.py  test_categoricals.py  test_cluster_plotter.py  test_combine.py  test_conditional_path_node.py  test_config_layer_traverser.py  test_configuration.py  test_configuration_dag.py  test_configuration_util.py  test_csv_reader.py  test_csv_writer.py  test_dag_plotting.json  test_dag_runner.py  test_data_object.py  test_dataframe_joiner.py  test_depth_first_traverser.py  test_deserializer.py  test_dill_reader.py  test_dill_writer.py  test_dupe_toplevel.json  (+38 more)
(+115 files in other folders)
