[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.2",
]

[project]
name = "primrose"
version = "0.1.0"
description = ""
authors = [
    {name = "calvin d. woo", email = "calvin.woo@ww.com"},
]
dependencies = [
    "pandas>=1.5.3",
    "click>=8.1.3",
    "scikit-learn>=1.2.2",
    "jstyleson>=0.0.2",
    "networkx>=3.0",
    "dill>=0.3.6",
    "pyyaml>=6.0",
    "google-cloud-storage>=2.7.0",
    "matplotlib>=3.7.1",
    "jinja2>=3.1.2",
    "boto3>=1.26.93",
    "mysql-connector-python>=8.0.32",
    "slackclient>=2.9.4",
    "testfixtures>=7.1.0",
    "moto>=4.1.4",
    "nltk>=3.8.1",
    "pydot>=1.4.2",
]
requires-python = ">=3.8"
readme = "README_DEVELOPER_NOTES.md"
license = {text = "MIT"}

[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.5",
    "psycopg2-binary>=2.9.5",
]
plotting = [
    "pygraphviz>=1.10",
]
R = [
    "rpy2>=3.5.10",
]
