[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[project]
name = "primrose"
version = "2.0.0"
description = "Primrose: a framework for simple, quick modeling deployments"
authors = [
    {name = "WW Data Science", email = "datascience@ww.com"}
]
maintainers = [
    {name = "Brian Graham", email = "brian.graham@ww.com"},
    {name = "Calvin Woo", email = "calvin.woo@ww.com"},
    {name = "Pierre Winter", email = "pierre.winter@ww.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.1.3",
    "jstyleson>=0.0.2",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "google-cloud-storage>=2.7.0",
    "jinja2>=3.1.2",
    "boto3>=1.26.93",
    "mysql-connector-python>=8.0.32",
    "slackclient>=2.9.4",
    "pydot>=1.4.2"
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/ww-tech/primrose"
"Documentation" = "https://ww-tech.github.io/primrose/"

[project.scripts]
primrose = "primrose.__init__:cli"

[project.optional-dependencies]
dev = [
    "dill>=0.3.6",
    "matplotlib>=3.7.1",
    "moto>=4.1.4",
    "nltk>=3.8.1",
    "pandas>=1.5.3",
    "pytest>=7.2.2",
    "scikit-learn>=1.2.2",
    "testfixtures>=7.1.0",
    "psycopg2>=2.9.5",
    "psycopg2-binary>=2.9.5",
    "pygraphviz>=1.10",
    "rpy2>=3.5.10"
]
